# cheribuild

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Jenkinsfile  LICENSE  Pipfile  README.md  beri-fpga-bsd-boot.py  build_cheribsd_for_qemu.py  cheribuild.py  combine-files.py  combined.py  docker-portable-cheribuild.py  generate-readme-help.sh  jenkins-cheri-build.py  jenkins-test.sh  mypy.ini  open-morello-serial-ports.py  py3-run-remote.sh  pyproject.toml  pytest.ini  pytype.cfg  remote-cheribuild.py  requirements.txt  update-jenkins-sdk.sh  update-readme-help.sh  vcu118-run-baremetal.py  vcu118-run.py
.github/workflows/: build-push-docker.yml  python-app.yml
.run/: cheribuild all NO TOOLS .run.xml  cheribuild all.run.xml  cheribuild argcomplete benchmark.run.xml  get config.run.xml  jenkins-cheri-build ALL.run.xml  pytest NO TOOLS.run.xml  pytest.run.xml
builder-config/: Instructions.md  README.md
cheribuild/: chericonfig.py  colour.py  project.py  targets.py  utils.py
cheribuild/projects/: awk.py  binutils.py  build_qemu.py  cheribsd.py  disk_image.py  elftoolchain.py  llvm.py  run_qemu.py  sdk.py
docker/: Dockerfile  Dockerfile.rocky8  Dockerfile.useradd  cheribuild-portable.json  cheribuild.json  docker-cheribuild.json  entrypoint.sh
githooks/: pre-push.sh
pycheribuild/: __main__.py  check_version.py  chericonfig.py  colour.py  configloader.py  filesystemutils.py  jenkins.py  jenkins_utils.py  mtree.py  processutils.py  project.py  qemu_utils.py  ssh_utils.py  targets.py  utils.py
pycheribuild/boot_cheribsd/: __init__.py
pycheribuild/config/: chericonfig.py  compilation_targets.py  computed_default_value.py  config_loader_base.py  defaultconfig.py  jenkinsconfig.py  loader.py  target_info.py
pycheribuild/files/: CheriBSDToolchain.cmake.in  CheriSDKConfig.cmake  CheriSDKConfigVersion.cmake.in  CrossToolchain.cmake.in  ForceStaticLibraries.cmake  NativeToolchain.cmake.in  cheridis.c  fixlinks.c  meson-cross-file-native-env.ini.in  meson-cross-file.ini.in  meson-machine-file.ini.in
pycheribuild/projects/: __init__.py  adduser.py  awk.py  bear.py  binutils.py  bluespec_compiler.py  bmake.py  bsdtar.py  build_qemu.py  cheri_afl.py  cheribsd.py  cherios.py  cherisim.py  cheritrace.py  cherivis.py  cjson.py  cmake.py  cmake_project.py  cvise.py  disk_image.py  docker_adduser.py  effectivesan.py  elftoolchain.py  fvp_firmware.py  gnustep.py  go.py  kdevelop.py  (+26 more)
release-scripts/: create_morello_release_tarball.py  tag_current_state.py
test-scripts/: boot_cheribsd.py  kyua_db_to_junit_xml.py  run_bodiagsuite.py  run_cheribsd_tests.py  run_ctest_tests.py  run_juliet_tests.py  run_libcxx_tests.py  run_libcxxrt_tests.py  run_libffi_tests.py  run_libunwind_tests.py  run_meson_tests.py  run_morello_webkit_tests.py  run_postgres_tests.py  run_python_tests.py  run_qtbase_tests.py  run_qtwebkit_tests.py  run_remote_lit_test.py  run_rlbox_tests.py  run_ros2_tests.py  run_simple_benchmarks.py  run_simple_tests.py  run_tests_common.py  test_boot.py  test_portable_binaries.py
tests/: benchmark_argcomplete.sh  conftest.py  pyproject.toml  python-3100.Dockerfile  python-3110.Dockerfile  python-34.Dockerfile  python-350.Dockerfile  python-36.Dockerfile  python-360.Dockerfile  python-370.Dockerfile  python-380.Dockerfile  python-390.Dockerfile  python-baseline.Dockerfile  python-latest.Dockerfile  python-rc.Dockerfile  requirements.txt  run_basic_tests.sh  run_jenkins_tests.sh  run_smoke_tests.sh  setup_mock_chericonfig.py  test_argument_parsing.py  test_async_delete.py  test_git_branch_switching.py  test_lld_inference.py  test_llvm_config.py  test_metalog.py  test_project_helpers.py  test_qemu_forwarding_ports.py  test_target_order.py  ubuntu-baseline.Dockerfile  ubuntu-latest.Dockerfile  ubuntu.Dockerfile
(+147 files in other folders)
